data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2226.wast
;; 7. **Test 7: Cross-Nesting Interaction with Unwind Mechanism**    - **Description:** Tests behavior with cross-referencing of nested blocks using the `br` instruction, focusing on the unwind mechanism.    - **Constraint:** Validates the correct unwinding and rebinding of stack state across cross-referencing of nested blocks.    - **Mismanagement Check:** Proper handling of nesting and unwinding depth in complex nested structures.

(assert_invalid
  (module (func $type-cross-nesting-unwind (result i32)
    (block (result i32)
      (block (result i32)
        (br 1 (i32.const 1))
        (br 0 (i32.const 2))
      )
      (br 0 (i32.const 3))
    )
  ))
  "type mismatch"
)